--- a/css/ourStyles.css
+++ b/css/ourStyles.css
@@ -62,6 +62,7 @@ section.content>div.container {
 
 .meta-info{
     padding-left: 0;
+    font-weight: bold;
 }
 
 .category-description{
@@ -70,10 +71,23 @@ section.content>div.container {
     padding-left: 15px;
     margin-bottom: 20px;
 }
+.teammate{
+    margin-bottom: 10px;
+}
+.teammate .name{
+    font-weight: bold;
+}
 /* media queries */
 @media all and (max-width: 767px) {
     ul.navbar-nav>li{
         text-align: center;
         font-size: 21px;
+    }
+    .teammate .description{
+       display:inline-block;
+       margin-left:20px;
+    }
+    .teammate img{
+        display:inline-block;
     }
 }
