--- a/css/ourStyles.css
+++ b/css/ourStyles.css
@@ -78,6 +78,10 @@ section.content>div.container {
     font-weight: bold;
 }
 
+.header-logo{
+    margin-top: -4px;
+}
+
 /* media queries */
 @media all and (max-width: 767px) {
     ul.navbar-nav>li{
