--- a/css/ourStyles.css
+++ b/css/ourStyles.css
@@ -76,10 +76,17 @@ section.content>div.container {
 }
 .teammate .name{
     font-weight: bold;
+
 }
 
 .header-logo{
     margin-top: -4px;
+}
+
+.user-profile-panel{
+    float: none !important;
+    margin: 0 auto;
+    padding: 0;
 }
 
 /* media queries */
